--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dev_dependencies:
   bloc: ^8.0.2
   flutter_bloc: ^8.0.1
   dio: ^4.0.4
+  connectivity_plus: ^2.3.6
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
